Fix checkout form on safari

--- a/resources/assets/sass/forms.scss
+++ b/resources/assets/sass/forms.scss
@@ -29,9 +29,10 @@ label.text-input-label {
 	}
 	input, textarea {
 		display: inline-block;
-		padding-top: 2rem;
-		padding-bottom: .9rem;
+		padding-top: 1.2rem;
+		padding-bottom: .2rem;
 		margin-bottom: 0;
+		height: 2.6rem;
 		box-shadow: none;
 		font-weight: 200;
 		line-height: 1.1;
